--- a/privacy.html
+++ b/privacy.html
@@ -43,7 +43,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
-                        Ruff ruff yorkies</a></span>
+                        Woov Woov Yorkies</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -92,7 +92,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">Privacy Policy</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">This Privacy Statement explains our practices regarding the collection, use, and disclosure of certain information, including your personal information, by us.
 <div>We recognize that your privacy is very important to you and that it is your right to control your personal information. We know that providing personal information is an act of trust and we take that trust seriously. We will never sell, rent or, except as set out in this Privacy Policy, otherwise disclose any of your personal information, including your Email address, to any third party without your consent. Unless you give us specific consent to act otherwise, the following policies will govern how we handles the personal information that you provide to us.
-</div><div>This privacy policy (the ”Statement”) covers Ruff ruff yorkies pet store service website. By using the our website, you consent to the data practices described in this Statement, as the same may be updated from time to time.
+</div><div>This privacy policy (the ”Statement”) covers Woov Woov Yorkies pet store service website. By using the our website, you consent to the data practices described in this Statement, as the same may be updated from time to time.
 </div><div>Consent to Privacy Policy
 </div><div>By your continued use of our Services following the posting of this Privacy Policy (as applicable), you agree to this Privacy Policy. This is our entire and exclusive Privacy Policy and it supersedes any earlier version. This Privacy Policy forms part of and should be read in conjunction with our Terms of Use and any additional applicable terms.</div></h3>
                 
@@ -128,7 +128,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/03e84a3b4bd968ec3baec5dfdfa0ba36-2018-dog-year-2018-logo-by-vexels-512x512.png" alt="" title="" media-simple="true">
+                        <img src="assets/images/print-306214-960-720-748x720.png" alt="" title="" media-simple="true">
                     </a>
                 </div>
             </div>
@@ -160,7 +160,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2018 Ruffruffyorkie.com- All Rights Reserved
+                        © Copyright 2019 woovwoovyorkies.com- All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
