--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
-                        Ruff ruff yorkies</a></span>
+                        Woov Woov Yorkies</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,7 +76,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Ruff Ruff Yorkies Contact Form"><input type="hidden" data-form-email="true" value="acYt3XrqU5AC7gDF+DsRmq+hT+JNLJJq8sWgnxrvMsQDH5OYPLmt/2caoWAuG+Dhzj2+/CrPnpNTahqgCFmuAzKEVOhPGNQcbiR9fP5LTdcpurcJiEaHeSIqbgC9diyu">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Woov Woov Yorkies Contact Form"><input type="hidden" data-form-email="true" value="acYt3XrqU5AC7gDF+DsRmq+hT+JNLJJq8sWgnxrvMsQDH5OYPLmt/2caoWAuG+Dhzj2+/CrPnpNTahqgCFmuAzKEVOhPGNQcbiR9fP5LTdcpurcJiEaHeSIqbgC9diyu">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-33">
@@ -116,7 +116,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/03e84a3b4bd968ec3baec5dfdfa0ba36-2018-dog-year-2018-logo-by-vexels-512x512.png" alt="" title="" media-simple="true">
+                        <img src="assets/images/print-306214-960-720-748x720.png" alt="" title="" media-simple="true">
                     </a>
                 </div>
             </div>
@@ -148,7 +148,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2018 Ruffruffyorkie.com- All Rights Reserved
+                        © Copyright 2019 woovwoovyorkies.com- All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
