--- a/order.html
+++ b/order.html
@@ -43,7 +43,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
-                        Ruff ruff yorkies</a></span>
+                        Woov Woov Yorkies</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -229,7 +229,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/03e84a3b4bd968ec3baec5dfdfa0ba36-2018-dog-year-2018-logo-by-vexels-512x512.png" alt="" title="" media-simple="true">
+                        <img src="assets/images/print-306214-960-720-748x720.png" alt="" title="" media-simple="true">
                     </a>
                 </div>
             </div>
@@ -261,7 +261,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2018 Ruffruffyorkie.com- All Rights Reserved
+                        © Copyright 2019 woovwoovyorkies.com- All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
